[package]
name = "freefeed-rs"
license = "MIT"
version = "0.1.0"

[lib]
name = "freefeed"
path = "src/lib/lib.rs"
doc = true
test = true
edition = "2018"

[[bin]]
edition = "2018"
name = "frf"
test = false
bench = false

[dependencies]
chrono = { version = "~0.4" }
clap = { version = "~4.1.1", features = ["derive", "env"] }
reqwest = { version = "~0.11.14", features = ["brotli", "gzip", "json"] }
serde = { version = "~1.0.152" }
serde_derive = { version = "~1.0.152" }
serde_json = { version = "~1.0.91" }
textwrap = { version = "~0.16.0", features = ["smawk", "terminal_size"] }
thiserror = { version = "~1.0.38" }
tokio = { version = "~1.24.2", features = ["full"] }
